--- a/index03/index.html
+++ b/index03/index.html
@@ -100,7 +100,7 @@
     <body>
         <h1 class="titulo-index">Bem-vindo à Jondroon</h1>
         <p class="descricao-index">Clique abaixo para cadastrar um novo cliente.</p>
-        <a href="formulario.html" class="botao-index">Cadastrar Cliente</a>
+        <a href="../index03/formulario/formulario.html" class="botao-index">Cadastrar Cliente</a>
     </body>
     </html>
     
